# opik

./: .cursorignore  .dockerignore  .editorconfig  .env.template  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hadolint.yaml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  AGENTS.md  ARCHITECTURE.md  BACKEND_CSV_PROCESSING_IMPLEMENTATION.md  BEDROCK_COST_TRACKING_SOLUTION.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CometLLM_Prompts.ipynb  Cost efficacy  DASHBOARD_BACKEND_SUMMARY.md  DATASET_VERSIONING_MIGRATION_SUMMARY.md  DEVELOPMENT_PLAN_AR.md  DOCKER_PROFILES_MIGRATION.md  INTEGRATION_DEMO.md  JAVA_PYTHON_RQ_INTEGRATION.md  LARGE_DATASET_UPLOAD_SUMMARY.md  LICENSE  MIGRATION_CHECKLIST.md  Makefile  Megha  OPENAI_TTS_TRACKING.md  OPIK-3069-test-results.md  Opik production.session.sql  PHASE1_IMPROVEMENTS.md  PHASE2_CURSOR_PAGINATION.md  PR_NOTES.md  PR_NOTES_FINAL.md  RAG_with_Opik_Azure_OpenAI.ipynb  (+631 more)
apps/esnode-core/ESNODE-Orchestrator/: Cargo.toml  README.md  config.json
apps/opik-ai-backend/: Dockerfile  README.md  pyproject.toml
apps/opik-config/: README.md  demo_agent.ipynb  dev-runner.sh  pyproject.toml
deployment/installer/: Makefile  README.md  Vagrantfile  dev-requirements.txt  pub-requirements.txt  pyproject.toml  setup.py
deployment/installer/opik_installer/: __init__.py  opik_constants.py  reporting.py  version.py
sdks/opik_optimizer/: .pre-commit-config.yaml  .ruff.toml  AGENTS.md  AGGRESSIVE_REFACTORING_PLAN.md  LICENSE  Makefile  OPTIMIZER_ALGORITHMS.md  OPTIMIZER_TECHNICAL_OVERVIEW.md  README.md  TECHNICAL_DEBT_REFACTOR_PLAN.md  conftest.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
sdks/opik_optimizer/benchmarks/: .gitignore  MODAL_SETUP.md  README.md  __init__.py  benchmark_checkpoint.py  benchmark_checkpoints.py  benchmark_config.py  benchmark_constants.py  benchmark_logging.py  benchmark_manifest.py  benchmark_monitor.py  benchmark_runner.py  benchmark_task.py  benchmark_taskspec.py  benchmark_utils.py  benchmark_worker.py  check_results.py  dspy-mipro-hotpot-500.py  external_optimizers.py  opik-mipro-hotpot-500.py  requirements.txt  run.py  run_benchmark.py  run_benchmark_local.py  run_benchmark_modal.py  submit_benchmarks.py  submit_benchmarks_modal.py  validation.py
sdks/opik_optimizer/docs/: 01-introduction.md  02-core-concepts.md  03-optimizers.md  03a-fewshot-bayesian-optimizer.md  03b-mipro-optimizer.md  03d-metaprompter.md  04-datasets-and-testing.md  05-configuration-and-usage.md  06-faq.md  07-api-reference.md  07a-litellm-integration.md  07b-integration-mechanics.md  optimization-framework-design.md
sdks/opik_optimizer/notebooks/: OpikOptimizerIntro.ipynb  OpikOptimizerWorkshop.ipynb  OpikSyntethicDataOptimizer.ipynb  opik_tinyqab_evolutionary_example.py
sdks/opik_optimizer/scripts/: __init__.py  adk_agent.py  adk_evolutionary_hotpot_example.py  adk_fewshot_hotpot_example.py  adk_hotpot.py  adk_hotpot_example.py  adk_metaprompt_hotpot_example.py  arc_agi2_baseline_prompt_optimizer.py  arc_agi2_hrpo_solver.py  dspy_mipro_hotpot.py  dspy_mipro_hotpot_example.py  evolutionary_hotpot_example.py  few_shot_bayesian_halueval_chat_prompt_example.py  few_shot_bayesian_halueval_example.py  few_shot_bayesian_hotpot_chat_prompt_example.py  few_shot_bayesian_hotpot_example.py  few_shot_example.py  few_shot_hotpot_example.py  generate_changelog.py  generate_fern_docs.py  genetic_hotpot_example.py  gepa_hotpot_multi_metric_objective_example.py  gepa_tiny_test_example.py  hotpot_dataset_generation.py  langgraph_agent.py  langgraph_evolutionary_hotpot_example.py  langgraph_fewshot_hotpot_example.py  langgraph_hotpot.py  langgraph_hotpot_example.py  langgraph_metaprompt_hotpot_example.py  litellm-hotpot-example.py  litellm-hotpot.py  litellm_evolutionary_context7_mcp_example.py  litellm_evolutionary_hazard_detection_example.py  litellm_evolutionary_hotpot_example.py  litellm_fewshot_browser_mcp_example.py  litellm_fewshot_context7_mcp_example.py  litellm_fewshot_hotpot_example.py  litellm_gepa_hotpot_example.py  litellm_gepa_tiny_test_example.py  (+25 more)
sdks/opik_optimizer/tests/: __init__.py  conftest.py  test_base_optimizer.py  test_example.py  test_few_shot_bayesian_optimizer.py  test_mappers.py  test_optimization_dsl.py  test_optimization_result.py  test_requirements.txt  test_setup.py  test_task_evaluator.py
sdks/opik_optimizer/work_in_progress/: few_shot_bayesian_halueval_example.py  few_shot_bayesian_hotpot_example.py
sdks/python/: .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CLAUDE.md  LICENSE  README-IMPORT-EXPORT.md  README.md  pyproject.toml  setup.py
sdks/python/design/: API_AND_DATA_FLOW.md  EVALUATION.md  INTEGRATIONS.md  PYTEST_PLUGIN_OVERHAUL.md  README.md  TESTING.md
sdks/python/docs/: PROMPT_FILTERING.md
sdks/python/examples/: agent_config_demo.ipynb  agent_insights_demo.ipynb  atomic_agents_quickstart.ipynb  atomic_agents_quickstart.py  claude_code_integration_example.py  dashboard_example.ipynb  decorators.py  demo_data.py  demo_data_generator.py  distributed_tracing_example.py  dynamic_tracing_cookbook.py  dynamic_tracing_example.py  evaluate_existing_experiment.py  evaluate_prompt.py  evaluation_example.py  evaluation_suite_example.py  experiment_metrics_example.py  feedback_scores_example.py  harbor_integration_example.py  langchain_integration_example.py  local_runner_task_example.py  manual_chain_building.py  metrics.py  openai_integration_example.py  openai_tts_example.py  openai_tts_tracking_example.py  prompt_filtering_example.py  remote.py  resume_evaluation.py  resume_evaluation_interactive.py  search_traces_and_spans.py  test_claude_code_real.py  test_experiment_finished_alert.py  test_trajectory_accuracy_judge.py  thread_with_image_attachment.py  threaded_decorators.py  trajectory_accuracy_evaluation.py  trajectory_accuracy_judge_example.py
sdks/python/runtime_tests/: test_runtime_config.py
sdks/python/scripts/: otel_claude_code_content_repro.py
sdks/python/tests/: .gitignore  conftest.py  llm_constants.py  pytest.ini  test_requirements.txt  (+1 more)
(+18663 files in other folders)
