[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "opik-installer"
dynamic = [
	"version",
]
description = "PIP installer for the Comet Opik"
readme = "README.md"
license = {"text" = "Apache License 2.0"}
authors = [
	{name = "Comet ML Inc.", email = "mail@comet.com"},
]
maintainers = [
	{name = "Diego Fernando Carrión (CRThaze)", email = "diegoc@comet.com"},
]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Science/Research",
	"Operating System :: MacOS",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Java",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: System :: Installation/Setup",
	"Typing :: Typed",
]
keywords = [
	"comet",
	"opik",
	"llm",
	"eval",
]
requires-python = ">=3.8.1,<4.0"
dependencies = [
	# "ansible-playbill>=0.4.0",
	"click>=8.1.3",
	"semver>=2.8.1",
]

[project.urls]
Homepage = "https://github.com/comet-ml/opik"
Documentation = "https://github.com/comet-ml/opik"
Repository = "https://github.com/comet-ml/opik.git"
Issues = "https://github.com/comet-ml/opik/issues"

[project.scripts]
opik-server = "opik_installer:main"

[tool.setuptools.package-data]
"*" = ["**/*.yml", "**/*.yaml", "**/*.j2", "**/*.sudoers", "**/*.repo"]
