[project]
name = "opik_optimizer"
version = "2.2.3"
description = "Agent optimization with Opik"
authors = [
    {name = "Comet ML", email = "support@comet.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "datasets",
    "deap>=1.4.3",
    "gepa>=0.0.7",
    "hf_xet",
    "litellm<=1.75.6",
    "mcp>=1.0.0",
    "opik>=1.9.7",
    "optuna",
    "pandas",
    "pydantic",
    "pyrate-limiter",
    "tqdm",
    "rich",
    "pillow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    # "google-adk",
    "langgraph",
    "pre-commit",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opik_optimizer = ["data/*.json", "data/*.jsonl"]

[project.urls]
Homepage = "https://github.com/comet-ml/opik/blob/main/sdks/opik_optimizer/README.md"
Repository = "https://github.com/comet-ml/opik"

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
mypy_path = "sdks/opik_optimizer/src"

[[tool.mypy.overrides]]
module = [
    "opik.*",
    "deap.*",
    "litellm.*",
    "rich.*",
    "pydantic.*",
    "optuna.*",
    "numpy.*",
    "rapidfuzz.*",
    "PIL.*",
    "datasets.*",
    "gepa.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.uv]
managed = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:pydantic.main",
    "ignore::pytest.PytestConfigWarning",
    "ignore::RuntimeWarning:litellm.integrations.opik.opik",
]

[tool.coverage.run]
branch = true
source = ["opik_optimizer"]
omit = ["opik_optimizer/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
