[project]
name = "opik_optimizer"
version = "2.3.11"
description = "Agent optimization with Opik"
authors = [
    {name = "Comet ML", email = "support@comet.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "datasets",
    "deap>=1.4.3",
    "gepa>=0.0.7",
    "hf_xet",
    # LiteLLM dependency comments:
    # - Exclude litellm 1.75.0-1.75.5 (broken callbacks system)
    # - Exclude versions 1.77.2-1.77.4: introduce C++ compiler dependency (madoka), fixed in 1.77.5
    #   See: https://github.com/BerriAI/litellm/issues/14762
    # - Exclude versions 1.77.5-1.79.1: remove trace_id/parent_span_id passthrough, fixed in 1.79.2+
    #   See: https://github.com/BerriAI/litellm/pull/15529
    "litellm>=1.79.2,!=1.75.0,!=1.75.1,!=1.75.2,!=1.75.3,!=1.75.4,!=1.75.5,!=1.77.3,!=1.77.4,!=1.77.5,!=1.77.7,!=1.78.0,!=1.78.2,!=1.78.3,!=1.78.4,!=1.78.5,!=1.78.6,!=1.78.7,!=1.79.0,!=1.79.1",
    "mcp>=1.0.0",
    "opik>=1.9.7",
    "optuna",
    "pandas",
    "pydantic",
    "pyrate-limiter",
    "tqdm",
    "rich",
    "pillow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-asyncio",
    "pytest-env",
    "pytest-profiling",
    # "google-adk",
    "langgraph",
    "pre-commit",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opik_optimizer = ["data/*.json", "data/*.jsonl"]

[project.urls]
Homepage = "https://github.com/comet-ml/opik/blob/main/sdks/opik_optimizer/README.md"
Repository = "https://github.com/comet-ml/opik"

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
mypy_path = "sdks/opik_optimizer"

[[tool.mypy.overrides]]
module = [
    "opik.*",
    "deap.*",
    "litellm.*",
    "rich.*",
    "pydantic.*",
    "optuna.*",
    "numpy.*",
    "rapidfuzz.*",
    "PIL.*",
    "datasets.*",
    "gepa.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.uv]
managed = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:pydantic.main",
    "ignore::pytest.PytestConfigWarning",
    "ignore::RuntimeWarning:litellm.integrations.opik.opik",
]

[tool.coverage.run]
branch = true
source = ["opik_optimizer"]
omit = ["opik_optimizer/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
extend-exclude = ["external"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # Enable pycodestyle (E), pyflakes (F), and isort (I)
ignore = ["E402"]  # Ignore module level import not at top of file

[tool.ruff.lint.isort]
known-first-party = ["opik_optimizer"]
combine-as-imports = true

[tool.vulture]
min_confidence = 60
paths = ["src", "tests", "scripts", "benchmarks"]
ignore_names = ["return_value", "side_effect"]
