[project]
name = "opik"
dynamic = [
    "version",
    "description",
    "readme",
    "requires-python",
    "license",
    "authors",
    "keywords",
    "classifiers",
    "urls",
    "dependencies",
]

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
check_untyped_defs = true

[tool.uv]
managed = false

[project.optional-dependencies]
atomic_agents = [
    "atomic-agents>=1.1.0,<2.0.0",
    "pydantic>=2.6,<3.0",
    "deepdiff>=6.7,<7.0",
]
