[project]
name = "opik-sdk-driver"
version = "0.0.1"
description = "Lean FastAPI service wrapping the Opik Python SDK for E2E test flows."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "opik>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opik_sdk_driver"]
